--- a/Client/iOS/EVSE/Base.lproj/Main_iPhone.storyboard
+++ b/Client/iOS/EVSE/Base.lproj/Main_iPhone.storyboard
@@ -35,7 +35,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="jps-Ji-BKa" style="IBUITableViewCellStyleDefault" id="sqC-Ha-6uU">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="jps-Ji-BKa" detailTextLabel="Kcy-2l-HpP" style="IBUITableViewCellStyleSubtitle" id="sqC-Ha-6uU">
                                         <rect key="frame" x="0.0" y="319" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sqC-Ha-6uU" id="RVJ-8d-1Tc">
@@ -43,10 +43,17 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Start" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jps-Ji-BKa">
-                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                                    <rect key="frame" x="15" y="3" width="39" height="22"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <color key="textColor" red="0.1774834965" green="0.76065726899999997" blue="0.10595985970000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Kcy-2l-HpP">
+                                                    <rect key="frame" x="15" y="25" width="43" height="15"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -82,18 +89,25 @@
                         <sections>
                             <tableViewSection headerTitle="Stoppen der Ladung" footerTitle="Das Stoppen der Ladung kann bis zu 5 Sekunden dauern!" id="jLM-SP-X12">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="wyr-7V-SWF" style="IBUITableViewCellStyleDefault" id="KR3-7c-giZ">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="wyr-7V-SWF" detailTextLabel="Yio-3C-Aex" style="IBUITableViewCellStyleSubtitle" id="KR3-7c-giZ">
                                         <rect key="frame" x="0.0" y="119" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KR3-7c-giZ" id="0O9-fX-oZN">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Stop" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wyr-7V-SWF">
-                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Ladung abbrechen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wyr-7V-SWF">
+                                                    <rect key="frame" x="15" y="3" width="152" height="22"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <color key="textColor" red="1" green="0.0" blue="0.011788656139999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Yio-3C-Aex">
+                                                    <rect key="frame" x="15" y="25" width="43" height="15"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -116,45 +130,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8ep-GB-pTg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="581" y="2473"/>
-        </scene>
-        <!--Controlling Table View Controller - Überwachung-->
-        <scene sceneID="2A5-UV-3ip">
-            <objects>
-                <tableViewController id="ZH1-DR-NZw" customClass="ControllingTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="pfK-6j-ab5">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <sections/>
-                        <connections>
-                            <outlet property="dataSource" destination="ZH1-DR-NZw" id="0i5-L3-Q4P"/>
-                            <outlet property="delegate" destination="ZH1-DR-NZw" id="CUr-gW-Yom"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Überwachung" id="5fV-ho-94z"/>
-                    <connections>
-                        <segue destination="Ozs-cg-v3E" kind="modal" identifier="showNetworkForm" id="Gjr-lZ-ijG"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PKB-8z-QCv" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="581" y="3922"/>
-        </scene>
-        <!--Navigation Controller - Überwachung-->
-        <scene sceneID="opQ-w0-JO7">
-            <objects>
-                <navigationController definesPresentationContext="YES" id="dmr-Jn-PkD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Überwachung" id="YuA-aw-lM5"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FQZ-K7-bgz">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="ZH1-DR-NZw" kind="relationship" relationship="rootViewController" id="QD8-RS-J5U"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nzD-pt-txd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="47" y="3922"/>
         </scene>
         <!--Navigation Controller - Ladung stoppen-->
         <scene sceneID="Btw-tu-7sD">
@@ -203,7 +178,6 @@
                         <segue destination="cnI-pW-vdb" kind="relationship" relationship="viewControllers" id="cv3-XI-zmo"/>
                         <segue destination="g9g-xr-85P" kind="relationship" relationship="viewControllers" id="D0G-Rd-pTj"/>
                         <segue destination="wOJ-IN-tQK" kind="relationship" relationship="viewControllers" id="QjV-K1-ejC"/>
-                        <segue destination="dmr-Jn-PkD" kind="relationship" relationship="viewControllers" id="D0G-iT-Osq"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uVq-bN-iz7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -381,6 +355,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="lqf-kz-cuy"/>
+        <segue reference="n0o-Bf-eza"/>
     </inferredMetricsTieBreakers>
 </document>
