--- a/Client/Desktop/EVSE/evsewindow.ui
+++ b/Client/Desktop/EVSE/evsewindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>498</width>
-    <height>574</height>
+    <width>991</width>
+    <height>734</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,29 +17,47 @@
    <string notr="true"/>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <property name="leftMargin">
+    <number>5</number>
+   </property>
+   <property name="topMargin">
+    <number>5</number>
+   </property>
+   <property name="rightMargin">
+    <number>5</number>
+   </property>
+   <property name="bottomMargin">
+    <number>5</number>
+   </property>
    <item row="0" column="0">
-    <widget class="QSplitter" name="splitter_3">
+    <widget class="QSplitter" name="splitter_4">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="handleWidth">
       <number>10</number>
      </property>
-     <widget class="QSplitter" name="splitter_2">
+     <widget class="QSplitter" name="splitter_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <property name="handleWidth">
-       <number>10</number>
-      </property>
-      <widget class="QFrame" name="frame_3">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
+      <widget class="QGroupBox" name="groupBox_3">
+       <property name="title">
+        <string>Senden von Befehlen</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_3">
+        <property name="leftMargin">
+         <number>5</number>
+        </property>
+        <property name="topMargin">
+         <number>5</number>
+        </property>
+        <property name="rightMargin">
+         <number>5</number>
+        </property>
+        <property name="bottomMargin">
+         <number>5</number>
+        </property>
         <item row="0" column="0">
          <widget class="QGroupBox" name="Interval">
           <property name="title">
@@ -356,214 +374,245 @@
        </column>
       </widget>
      </widget>
-     <widget class="QSplitter" name="splitter">
+     <widget class="QSplitter" name="splitter_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <property name="handleWidth">
-       <number>10</number>
-      </property>
-      <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
+      <widget class="QSplitter" name="splitter">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-       <layout class="QGridLayout" name="gridLayout_4">
-        <item row="0" column="0">
-         <widget class="QTableWidget" name="stateTable">
-          <property name="contextMenuPolicy">
-           <enum>Qt::CustomContextMenu</enum>
-          </property>
-          <property name="editTriggers">
-           <set>QAbstractItemView::NoEditTriggers</set>
-          </property>
-          <property name="alternatingRowColors">
-           <bool>false</bool>
-          </property>
-          <property name="selectionMode">
-           <enum>QAbstractItemView::NoSelection</enum>
-          </property>
-          <property name="selectionBehavior">
-           <enum>QAbstractItemView::SelectItems</enum>
-          </property>
-          <property name="showGrid">
-           <bool>false</bool>
-          </property>
-          <property name="gridStyle">
-           <enum>Qt::DashDotDotLine</enum>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-          <property name="cornerButtonEnabled">
-           <bool>false</bool>
-          </property>
-          <attribute name="horizontalHeaderVisible">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="horizontalHeaderCascadingSectionResizes">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>60</number>
-          </attribute>
-          <attribute name="horizontalHeaderStretchLastSection">
-           <bool>true</bool>
-          </attribute>
-          <attribute name="verticalHeaderVisible">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="verticalHeaderCascadingSectionResizes">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="verticalHeaderDefaultSectionSize">
-           <number>20</number>
-          </attribute>
-          <attribute name="verticalHeaderHighlightSections">
-           <bool>false</bool>
-          </attribute>
-          <attribute name="verticalHeaderMinimumSectionSize">
-           <number>20</number>
-          </attribute>
-          <attribute name="verticalHeaderStretchLastSection">
-           <bool>false</bool>
-          </attribute>
-          <row>
-           <property name="text">
-            <string>/</string>
+       <widget class="QGroupBox" name="groupBox_4">
+        <property name="title">
+         <string>Ladeinformation</string>
+        </property>
+        <property name="flat">
+         <bool>false</bool>
+        </property>
+        <property name="checkable">
+         <bool>false</bool>
+        </property>
+       </widget>
+       <widget class="QGroupBox" name="groupBox">
+        <property name="title">
+         <string>Statuscodes</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_4">
+         <property name="leftMargin">
+          <number>5</number>
+         </property>
+         <property name="topMargin">
+          <number>5</number>
+         </property>
+         <property name="rightMargin">
+          <number>5</number>
+         </property>
+         <property name="bottomMargin">
+          <number>5</number>
+         </property>
+         <item row="0" column="0">
+          <widget class="QTableWidget" name="stateTable">
+           <property name="contextMenuPolicy">
+            <enum>Qt::CustomContextMenu</enum>
            </property>
-          </row>
-          <row>
-           <property name="text">
-            <string>A</string>
+           <property name="editTriggers">
+            <set>QAbstractItemView::NoEditTriggers</set>
            </property>
-          </row>
-          <row>
-           <property name="text">
-            <string>B</string>
+           <property name="alternatingRowColors">
+            <bool>false</bool>
            </property>
-          </row>
-          <row>
-           <property name="text">
-            <string>C</string>
+           <property name="selectionMode">
+            <enum>QAbstractItemView::NoSelection</enum>
            </property>
-          </row>
-          <row>
-           <property name="text">
-            <string>D</string>
+           <property name="selectionBehavior">
+            <enum>QAbstractItemView::SelectItems</enum>
            </property>
-          </row>
-          <row>
-           <property name="text">
-            <string>E</string>
+           <property name="showGrid">
+            <bool>false</bool>
            </property>
-          </row>
-          <row>
-           <property name="text">
-            <string>F</string>
+           <property name="gridStyle">
+            <enum>Qt::DashDotDotLine</enum>
            </property>
-          </row>
-          <column>
-           <property name="text">
-            <string>Code</string>
+           <property name="wordWrap">
+            <bool>true</bool>
            </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>Beschreibung</string>
+           <property name="cornerButtonEnabled">
+            <bool>false</bool>
            </property>
-          </column>
-          <item row="0" column="0">
+           <attribute name="horizontalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="horizontalHeaderCascadingSectionResizes">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="horizontalHeaderDefaultSectionSize">
+            <number>60</number>
+           </attribute>
+           <attribute name="horizontalHeaderStretchLastSection">
+            <bool>true</bool>
+           </attribute>
+           <attribute name="verticalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="verticalHeaderCascadingSectionResizes">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="verticalHeaderDefaultSectionSize">
+            <number>20</number>
+           </attribute>
+           <attribute name="verticalHeaderHighlightSections">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="verticalHeaderMinimumSectionSize">
+            <number>20</number>
+           </attribute>
+           <attribute name="verticalHeaderStretchLastSection">
+            <bool>false</bool>
+           </attribute>
+           <row>
+            <property name="text">
+             <string>/</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>A</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>B</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>C</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>D</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>E</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>F</string>
+            </property>
+           </row>
+           <column>
+            <property name="text">
+             <string>Code</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Beschreibung</string>
+            </property>
+           </column>
+           <item row="0" column="0">
+            <property name="text">
+             <string>/</string>
+            </property>
+           </item>
+           <item row="0" column="1">
+            <property name="text">
+             <string>Fehler!</string>
+            </property>
+           </item>
+           <item row="1" column="0">
+            <property name="text">
+             <string>A</string>
+            </property>
+           </item>
+           <item row="1" column="1">
+            <property name="text">
+             <string>Kein Fahrzeug angeschlossen</string>
+            </property>
+           </item>
+           <item row="2" column="0">
+            <property name="text">
+             <string>B</string>
+            </property>
+           </item>
+           <item row="2" column="1">
+            <property name="text">
+             <string>Fahrzeug angeschlossen</string>
+            </property>
+           </item>
+           <item row="3" column="0">
+            <property name="text">
+             <string>C</string>
+            </property>
+           </item>
+           <item row="3" column="1">
+            <property name="text">
+             <string>Ladevorgang ohne Lüfter</string>
+            </property>
+           </item>
+           <item row="4" column="0">
+            <property name="text">
+             <string>D</string>
+            </property>
+           </item>
+           <item row="4" column="1">
+            <property name="text">
+             <string>Ladevorgang mit Lüfter</string>
+            </property>
+           </item>
+           <item row="5" column="0">
+            <property name="text">
+             <string>E</string>
+            </property>
+           </item>
+           <item row="5" column="1">
+            <property name="text">
+             <string>Kurzschluss oder Spannungsausfall</string>
+            </property>
+           </item>
+           <item row="6" column="0">
+            <property name="text">
+             <string>F</string>
+            </property>
+           </item>
+           <item row="6" column="1">
+            <property name="text">
+             <string>Tankstelle nicht verfügbar</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="forceIndicator">
            <property name="text">
-            <string>/</string>
+            <string>Force: unbekannt</string>
            </property>
-          </item>
-          <item row="0" column="1">
-           <property name="text">
-            <string>Fehler!</string>
-           </property>
-          </item>
-          <item row="1" column="0">
-           <property name="text">
-            <string>A</string>
-           </property>
-          </item>
-          <item row="1" column="1">
-           <property name="text">
-            <string>Kein Fahrzeug angeschlossen</string>
-           </property>
-          </item>
-          <item row="2" column="0">
-           <property name="text">
-            <string>B</string>
-           </property>
-          </item>
-          <item row="2" column="1">
-           <property name="text">
-            <string>Fahrzeug angeschlossen</string>
-           </property>
-          </item>
-          <item row="3" column="0">
-           <property name="text">
-            <string>C</string>
-           </property>
-          </item>
-          <item row="3" column="1">
-           <property name="text">
-            <string>Ladevorgang ohne Lüfter</string>
-           </property>
-          </item>
-          <item row="4" column="0">
-           <property name="text">
-            <string>D</string>
-           </property>
-          </item>
-          <item row="4" column="1">
-           <property name="text">
-            <string>Ladevorgang mit Lüfter</string>
-           </property>
-          </item>
-          <item row="5" column="0">
-           <property name="text">
-            <string>E</string>
-           </property>
-          </item>
-          <item row="5" column="1">
-           <property name="text">
-            <string>Kurzschluss oder Spannungsausfall</string>
-           </property>
-          </item>
-          <item row="6" column="0">
-           <property name="text">
-            <string>F</string>
-           </property>
-          </item>
-          <item row="6" column="1">
-           <property name="text">
-            <string>Tankstelle nicht verfügbar</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="forceIndicator">
-          <property name="text">
-           <string>Force: unbekannt</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </widget>
-      <widget class="QFrame" name="frame_2">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
+      <widget class="QGroupBox" name="groupBox_2">
+       <property name="title">
+        <string>Befehle und Netzwerk</string>
        </property>
        <layout class="QGridLayout" name="gridLayout">
+        <property name="leftMargin">
+         <number>5</number>
+        </property>
+        <property name="topMargin">
+         <number>5</number>
+        </property>
+        <property name="rightMargin">
+         <number>5</number>
+        </property>
+        <property name="bottomMargin">
+         <number>5</number>
+        </property>
         <item row="1" column="0">
          <widget class="QLineEdit" name="lineEdit"/>
         </item>
@@ -592,50 +641,18 @@
  <resources/>
  <connections>
   <connection>
-   <sender>pwmDial</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>pwmSpinBox</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>194</x>
-     <y>383</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>96</x>
-     <y>370</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>pwmSpinBox</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>pwmDial</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>96</x>
-     <y>370</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>194</x>
-     <y>383</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>lineEdit</sender>
    <signal>returnPressed()</signal>
    <receiver>pushButton</receiver>
    <slot>click()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>331</x>
-     <y>535</y>
+     <x>699</x>
+     <y>701</y>
     </hint>
     <hint type="destinationlabel">
-     <x>427</x>
-     <y>541</y>
+     <x>921</x>
+     <y>703</y>
     </hint>
    </hints>
   </connection>
